<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.tesi.marco.filo.AddDataActivity">

    <Button
        android:id="@+id/add_therapy_event"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin"
        android:layout_marginLeft="@dimen/margin"
        android:layout_marginStart="@dimen/margin"
        android:layout_marginRight="@dimen/margin"
        android:layout_marginEnd="@dimen/margin"
        android:layout_marginBottom="@dimen/half_margin"
        android:text="@string/event_therapy" />

    <Button
        android:id="@+id/add_physical_examination_event"
        android:layout_below="@id/add_therapy_event"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/half_margin"
        android:layout_marginLeft="@dimen/margin"
        android:layout_marginStart="@dimen/margin"
        android:layout_marginRight="@dimen/margin"
        android:layout_marginEnd="@dimen/margin"
        android:layout_marginBottom="@dimen/half_margin"
        android:text="@string/event_physical_examination" />

    <Button
        android:id="@+id/add_hospitalization_event"
        android:layout_below="@id/add_physical_examination_event"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/half_margin"
        android:layout_marginLeft="@dimen/margin"
        android:layout_marginStart="@dimen/margin"
        android:layout_marginRight="@dimen/margin"
        android:layout_marginEnd="@dimen/margin"
        android:layout_marginBottom="@dimen/half_margin"
        android:text="@string/event_hospitalization" />

    <Button
        android:id="@+id/add_bleeding_event"
        android:layout_below="@id/add_hospitalization_event"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/half_margin"
        android:layout_marginLeft="@dimen/margin"
        android:layout_marginStart="@dimen/margin"
        android:layout_marginRight="@dimen/margin"
        android:layout_marginEnd="@dimen/margin"
        android:layout_marginBottom="@dimen/half_margin"
        android:text="@string/event_bleeding"/>

    <Button
        android:id="@+id/add_examination_data"
        android:layout_below="@id/add_bleeding_event"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/half_margin"
        android:layout_marginLeft="@dimen/margin"
        android:layout_marginStart="@dimen/margin"
        android:layout_marginRight="@dimen/margin"
        android:layout_marginEnd="@dimen/margin"
        android:layout_marginBottom="@dimen/half_margin"
        android:text="@string/event_add_examination_data"/>

</RelativeLayout>
