<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.tesi.marco.filo.RegistrationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/padding">

    <ProgressBar
        android:id="@+id/registration_progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"/>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/field_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_name"
            android:maxLines="1"
            android:inputType="text"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/padding">

        <EditText
            android:id="@+id/field_surname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_surname"
            android:maxLines="1"
            android:inputType="text"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/padding">

        <EditText
            android:id="@+id/field_registration_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_email"
            android:maxLines="1"
            android:inputType="textEmailAddress"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/padding">

        <EditText
            android:id="@+id/field_registration_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_password"
            android:maxLines="1"
            android:inputType="textPassword" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/padding">

        <EditText
            android:id="@+id/field_codice_fiscale"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_codice_fiscale"
            android:maxLines="1"
            android:inputType="textCapCharacters" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/padding">

        <EditText
            android:id="@+id/field_registration_dateofbirth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/date_of_birth"
            android:inputType="date"/>
    </android.support.design.widget.TextInputLayout>

    <!--<LinearLayout
        android:id="@+id/date_of_birth"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/date_of_birth_text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_of_birth"
            android:textSize="@dimen/text"
            android:textColor="@color/black"
            android:layout_margin="@dimen/margin" />

        <TextView
            android:id="@+id/date_of_birth_text2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_more"
            android:textColor="@color/colorAccent"
            android:layout_margin="@dimen/margin" />

    </LinearLayout>-->

    <Button
        android:id="@+id/registration_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/action_registration"/>

    </LinearLayout>

</ScrollView>
