<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/alert_old_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin"
        android:layout_marginLeft="@dimen/margin"
        android:layout_marginStart="@dimen/margin"
        android:layout_marginRight="@dimen/margin"
        android:layout_marginEnd="@dimen/margin"
        android:layout_marginBottom="@dimen/margin"
        android:text="@string/alert_old_date"
        android:textAlignment="center"
        android:textSize="@dimen/text"
        android:textColor="@color/colorAlert"
        android:visibility="gone"
    />

    <EditText
        android:id="@+id/edit_max_pressure"
        android:layout_below="@id/alert_old_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin"
        android:layout_marginStart="@dimen/margin"
        android:layout_marginRight="@dimen/margin"
        android:layout_marginEnd="@dimen/margin"
        android:layout_marginBottom="@dimen/half_margin"
        android:hint="@string/maximum_pressure"
        android:textSize="@dimen/text"
        />

    <EditText
        android:id="@+id/edit_min_pressure"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_max_pressure"
        android:layout_marginTop="@dimen/half_margin"
        android:layout_marginLeft="@dimen/margin"
        android:layout_marginStart="@dimen/margin"
        android:layout_marginRight="@dimen/margin"
        android:layout_marginEnd="@dimen/margin"
        android:hint="@string/minimum_pressure"
        android:textSize="@dimen/text"
        android:inputType="numberDecimal"/>

</RelativeLayout>