<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:background="@color/grey_100"
    android:padding="@dimen/activity_margin"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <ProgressBar
        android:id="@+id/login_progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/login_logo"
                android:layout_width="160dp"
                android:layout_height="160dp"
                android:layout_margin="@dimen/margin"
                android:layout_gravity="center_horizontal"
                android:src="@mipmap/heart_login"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/developed_by"
                android:textAlignment="center"/>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/padding">

                <AutoCompleteTextView
                    android:id="@+id/field_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:textSize="@dimen/text"
                    android:maxLines="1"
                    android:inputType="textEmailAddress"
                    android:imeOptions="actionNext"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/padding">

                <EditText
                    android:id="@+id/field_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:textSize="@dimen/text"
                    android:maxLines="1"
                    android:inputType="textPassword"
                    />

            </android.support.design.widget.TextInputLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/padding">

                <TextView
                    android:id="@+id/forgot_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/half_margin"
                    android:layout_marginStart="@dimen/half_margin"
                    android:textColor="@color/colorAccent"
                    android:text="@string/forgot_password"
                    android:textSize="@dimen/reduced_text"
                    android:clickable="true"/>

                <Button
                    android:id="@+id/email_sign_in_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/forgot_password"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:text="@string/action_sign_in"/>

            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>